@@ -47,6 +47,8 @@ import org.lflang.util.FileUtil;
 import org.lflang.util.StringUtil;
 import org.lflang.validation.LFValidator;
 
+import com.google.common.collect.ImmutableList;
+
 /**
  * A target properties along with a type and a list of supporting targets
  * that supports it, as well as a function for configuration updates.
@@ -194,7 +196,7 @@ public enum TargetProperty {
      * compiled binary.
      */
     EXTERNAL_RUNTIME_PATH("external-runtime-path", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP), (config, value, err) -> {
+            List.of(Target.CPP), (config, value, err) -> {
                 config.externalRuntimePath = ASTUtils.elementToSingleString(value);
             }),
 
@@ -1148,7 +1150,7 @@ public enum TargetProperty {
          * 
          * @param e      The element to type check.
          * @param name   The name of the target property.
-         * @param errors A list of errors to append to if problems are found.
+         * @param v      The validator to which any errors should be reported.
          */
         public void check(Element e, String name, LFValidator v) {
             if (!this.validate(e)) {
@@ -1311,6 +1313,12 @@ public enum TargetProperty {
      */
     public enum SchedulerOption {
         NP(false),         // Non-preemptive
+        adaptive(false, List.of(
+            Path.of("scheduler_adaptive.c"),
+            Path.of("worker_assignments.h"),
+            Path.of("worker_states.h"),
+            Path.of("data_collection.h")
+        )),
         GEDF_NP(true),    // Global EDF non-preemptive
         GEDF_NP_CI(true); // Global EDF non-preemptive with chain ID
         // PEDF_NP(true);    // Partitioned EDF non-preemptive (FIXME: To be re-added in a future PR)
@@ -1318,17 +1326,30 @@ public enum TargetProperty {
         /**
          * Indicate whether or not the scheduler prioritizes reactions by deadline.
          */
-        private final Boolean prioritizesDeadline;
-        
+        private final boolean prioritizesDeadline;
+
+        /** Relative paths to files required by this scheduler. */
+        private final List<Path> relativePaths;
+
+        SchedulerOption(boolean prioritizesDeadline) {
+            this(prioritizesDeadline, null);
+        }
+
+        SchedulerOption(boolean prioritizesDeadline, List<Path> relativePaths) {
+            this.prioritizesDeadline = prioritizesDeadline;
+            this.relativePaths = relativePaths;
+        }
+
         /**
          * Return true if the scheduler prioritizes reactions by deadline.
          */
-        public Boolean prioritizesDeadline() {
+        public boolean prioritizesDeadline() {
             return this.prioritizesDeadline;
         }
-        
-        private SchedulerOption(Boolean prioritizesDeadline) {
-            this.prioritizesDeadline = prioritizesDeadline;
+
+        public List<Path> getRelativePaths() {
+            return relativePaths != null ? ImmutableList.copyOf(relativePaths) :
+                   List.of(Path.of("scheduler_" + this + ".c"));
         }
         
         public static SchedulerOption getDefault() {
